--- a/src/assets/Signup.scss
+++ b/src/assets/Signup.scss
@@ -67,6 +67,7 @@ $green:#00e67f;
                 border-radius:30px;
                 width:60%;
                 margin:0 auto;
+                display: inline-block;
             }
             .nav-pills .nav-link{
                 border-radius:3.25rem;
