--- a/src/assets/Signup.scss
+++ b/src/assets/Signup.scss
@@ -67,8 +67,13 @@ $green:#00e67f;
                 border-radius:30px;
                 width:60%;
                 margin:0 auto;
-                display: inline-block;
+                
             }
+            .form-inline{
+            .searchh{
+                display: inline-block !important;
+            }
+        }
             .nav-pills .nav-link{
                 border-radius:3.25rem;
             }
@@ -77,7 +82,8 @@ $green:#00e67f;
     background-color: $green;
     
     a{
-        color:$black
+        color:$black;
+        
     }
             }
     .nav-pills .nav-link{
