--- a/src/assets/Signup.scss
+++ b/src/assets/Signup.scss
@@ -70,7 +70,7 @@ $back:#292929;
   }
   .form-inline {
     .searchh {
-      display: inline-block !important;
+      display: inline !important;
     }
   }
 
